<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SudokuChecker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="row_values">Row Values</string>
    <string name="instructions">Enter Board Below:</string>
    <string name="name">Charlie Martell</string>	
    <string name="greeting">Sudoku Checker</string>	
    <string name="solve">Solve</string>	

</resources>
