<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sudokusolver.MainActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/greeting" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/name" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/instructions" />


        <requestFocus />

        <EditText
            android:inputType="number"
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText1"
            android:layout_below="@+id/editText1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/row_values"
            android:maxLength="9" />

        <EditText
            android:inputType="number"
            android:id="@+id/editText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText5"
            android:layout_below="@+id/editText5"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/row_values"
            android:maxLength="9" />

        <EditText
            android:inputType="number"
            android:id="@+id/editText7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText6"
            android:layout_below="@+id/editText6"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/row_values"
            android:maxLength="9" />

        <EditText
            android:inputType="number"
            android:id="@+id/editText8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText7"
            android:layout_below="@+id/editText7"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/row_values"
            android:maxLength="9" />

        <EditText
            android:inputType="number"
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/row_values"
            android:maxLength="9" />

        <EditText
            android:inputType="number"
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText2"
            android:layout_below="@+id/editText2"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/row_values"
            android:maxLength="9" />

        <EditText
            android:inputType="number"
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText3"
            android:layout_below="@+id/editText3"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/row_values"
            android:maxLength="9" />

        <EditText
            android:inputType="number"
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText4"
            android:layout_below="@+id/editText4"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/row_values"
            android:maxLength="9" />

        <EditText
            android:inputType="number"
            android:id="@+id/editText9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText8"
            android:layout_below="@+id/editText8"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/row_values"
            android:maxLength="9" />

        <Button
            android:id="@+id/solve_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textView1"
            android:layout_below="@+id/editText9"
            android:gravity="center"
            android:text="@string/solve" />

</RelativeLayout>